added images of categories in team page

--- a/new/team.html
+++ b/new/team.html
@@ -142,49 +142,49 @@
                             <div id="mechJS">
                             <div class="col-xs-3 ">
                              <div>
-                             <a href="steering.html"><img src="src/img/a.png" alt="steering" class="personImage"><br></a>
+                             <a href="steering.html"><img src="src/img/categories/steering.jpg" alt="steering" class="personImage"><br></a>
                             <span style="margin-left:6%;"class="teamname"> Steering</span>
                              </div>
                            </div>
                            <div class="col-xs-3">
                              <div>
-                            <a href="suspension.html"><img src="src/img/a.png" alt="suspension" class="personImage" ><br></a>
+                            <a href="suspension.html"><img src="src/img/categories/suspension.jpg" alt="suspension" class="personImage" ><br></a>
                          <span style="margin-left:6%;"class="teamname"> Suspension</span>
                              </div>
                            </div>
                            <div class="col-xs-3">
                              <div>
-                             <a href="braking.html"><img src="src/img/a.png" alt="braking" class="personImage"><br></a>
+                             <a href="braking.html"><img src="src/img/categories/braking.jpg" alt="braking" class="personImage"><br></a>
                              <span  style="margin-left:7%;"style="margin-left:6%;"class="teamname"> Braking</span>
                              </div>
                            </div>
                            <div class="col-xs-3">
                               <div>
-                                 <a href="vehicle.html"> <img src="src/img/a.png" alt="Vehicle Dynamics" class="personImage"><br></a>
+                                 <a href="vehicle.html"> <img src="src/img/categories/vehicle.jpg" alt="Vehicle Dynamics" class="personImage"><br></a>
                             <span  style="margin-left:6%;"class="teamname"> Vehicle Dynamics</span>
                               </div><br><br>
                            </div>
                             <div class="col-xs-3">
                               <div>
-                             <a href="structural.html">  <img src="src/img/a.png" alt="Structural" class="personImage"><br></a>
+                             <a href="structural.html">  <img src="src/img/categories/structural.jpg" alt="Structural" class="personImage"><br></a>
                             <span  style="margin-left:6%;"class="teamname"> Structural</span>
                               </div>
                            </div>
                            <div class="col-xs-3">
                               <div>
-                                <a href="aerodynamics.html"> <img src="src/img/a.png" alt="Aerodynamics" class="personImage"><br></a>
+                                <a href="aerodynamics.html"> <img src="src/img/categories/aerodynamics.jpg" alt="Aerodynamics" class="personImage"><br></a>
                          <span  style="margin-left:6%;"class="teamname"> Aerodynamics</span>
                               </div>
                            </div>
                            <div class="col-xs-3">
                               <div>
-                               <a href="material.html">  <img src="src/img/a.png" alt="Material Analysis" class="personImage"><br></a>
+                               <a href="material.html">  <img src="src/img/categories/material.jpg" alt="Material Analysis" class="personImage"><br></a>
                              <span  style="margin-left:6%;"class="teamname"> Material Analysis</span></a>
                               </div>
                            </div>
                            <div class="col-xs-3">
                               <div>
-                               <a href="powertrain.html"> <img src="src/img/a.png" alt="powertrain" class="personImage"><br></a>
+                               <a href="powertrain.html"> <img src="src/img/categories/powertrain.jpg" alt="powertrain" class="personImage"><br></a>
                               <span  style="margin-left:6%;"class="teamname">Powertrain</span>
                               </div>
                           </div>
@@ -198,25 +198,25 @@
                          <div id="elecJS">
                            <div class="col-xs-3">
                              <div>
-                            <a href="hvsystem.html">  <img src="src/img/a.png" alt="" class="personImage"><br></a>
+                            <a href="hvsystem.html">  <img src="src/img/categories/hvsystem.jpg" alt="" class="personImage"><br></a>
                            <span  style="margin-left:6%;"class="teamname"> HV System</span>
                              </div>
                            </div>
                            <div class="col-xs-3">
                              <div>
-                            <a href="lvsystem.html"><img src="src/img/a.png" alt="" class="personImage"><br></a>
+                            <a href="lvsystem.html"><img src="src/img/categories/lvsystem.jpg" alt="" class="personImage"><br></a>
                           <span  style="margin-left:6%;"class="teamname"> LV System</span>
                              </div>
                            </div>
                            <div class="col-xs-3">
                              <div>
-                            <a href="vehicleControl.html"><img src="src/img/a.png" alt="" class="personImage"><br></a>
+                            <a href="vehicleControl.html"><img src="src/img/categories/vehicleControl.jpg" alt="" class="personImage"><br></a>
                           <span  style="margin-left:6%;"class="teamname">Vehical Control Unit</span>
                              </div>
                              </div>
                            <div class="col-xs-3">
                              <div>
-                            <a href="dataAcquisition.html">  <img src="src/img/a.png" alt="braking" class="personImage"><br></a>
+                            <a href="dataAcquisition.html">  <img src="src/img/categories/dataAcquisition.jpg" alt="data" class="personImage"><br></a>
                            <span  style="margin-left:6%;"class="teamname"> Data acquisition</span>
                              </div>
                            </div>
