--- a/new/about.html
+++ b/new/about.html
@@ -76,13 +76,13 @@
                     </div>
                     <div class="collapse navbar-collapse staticnaavbar" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right  headerLink">
-                                <li><a href="index.html">HOME</a></li>
-                                <li class="active"><a href="about.html">ABOUT US</a></li>
-                                <li><a href="project.html">CARS</a></li>
-                                <li><a href="team.html">TEAM</a></li>
-                                <li><a href="gallery.html">GALLERY</a></li>
-                                <li><a href="sponsors.html">SPONSORS</a></li>
-                                <li><a href="#contact" class="scrollTo">CONTACT US</a></li>
+                                <li><a href="index.html" class="navmobview">HOME</a></li>
+                                <li class="active navmobview"><a href="about.html">ABOUT US</a></li>
+                                <li><a href="project.html" class="navmobview">CARS</a></li>
+                                <li><a href="team.html" class="navmobview">TEAM</a></li>
+                                <li><a href="gallery.html" class="navmobview">GALLERY</a></li>
+                                <li><a href="sponsors.html" class="navmobview">SPONSORS</a></li>
+                                <li><a href="#contact" class="scrollTo" class="navmobview">CONTACT US</a></li>
                             </ul>
                     </div><!-- /.navbar-collapse -->
                   </div><!-- /.container-fluid -->
