minor changes on main page

--- a/new/index.html
+++ b/new/index.html
@@ -107,7 +107,7 @@
     	<img src="src/img/gallery/img2017.jpg" class="mainfrontimage"></div>
     </div>
     <div class="">
-    	<p class="welcomeToMotorsport">WELCOME TO MOTORSPORT</p>
+    	<p class="welcomeToMotorsport">WELCOME TO IIT ROORKEE MOTORSPORTS</p>
     </div>
 		<!-- <div class="container-fluid sideIcons" style="">
 			        <div class="row">
@@ -162,8 +162,14 @@
 			<div class="row eventDiv borderLine">
 				<div class="col-sm-6 rightBorder eventPad">
 					<p class="eventHeading navbarAnimate">UPDATES</p>
-					<p class="eventContent eventContentHeading navbarAnimate" >FS Germany 2018 </p>
-					<p class="eventContent navbarAnimate text-justify">As our next venture, we are planning to participate in Formula Student Germany, which is going to be held in the month of August, 2018. The team is working with its full pace with the introduction of various new concepts in design.</p>
+					<p class="eventContent eventContentHeading navbarAnimate" >Participating in Formula Bharat 2019 followed by FS UK 2019 </p>
+					<p class="eventContent navbarAnimate text-justify">23 Mar 2018 - Procurement and Fabrication of the car is starting from the 1st week of April.</br>
+22 Mar 2018 - Design of the next car is completed.</br>
+17 Mar 2018 - Vehicle and current project exhibition at Srishti 2018  A Techno-hobby competition of IIT Roorkee.</br>
+10 Mar 2018 - BEG Exhibition at Group Ground Roorkee Cantonment.</br>
+10 Feb 2018 - Team has successfully tested the prototype of BMS.</br>
+27 Oct 2017 - Thomso 2017 Promotional event .</br>
+</p>
 
 				</div>
 				<!--<div class="col-sm-6 eventPad ">
