--- a/new/project.html
+++ b/new/project.html
@@ -82,25 +82,25 @@
 		</nav>
 	<div id="sliderFrame" style="margin-top: 5vh;margin-bottom: 5vh">
         <div id="slider">
-            <a href="#cars2017"><img src="src/img/gallery/img1.jpg"  /></a>
-            <a href="#cars2015"><b data-src="src/img/gallery/img2.jpg"></b></a>
-            <a href="#cars2013"><b data-src="src/img/gallery/img3.jpg"></b></a>
+            <a href="#cars2017"><img src="works/hullo-81.jpg" /></a>
+            <a href="#cars2015"><b data-src="src/img/gallery/pic5.jpg"></b></a>
+            <a href="#cars2013"><b data-src="works/img2.jpg"></b></a>
              <a href="#cars2011" ><img src="src/img/gallery/img4.jpg"  /></a>
         </div>
         <!--thumbnails-->
         <div id="thumbs">
           <a href="#cars2017">  <div class="thumb">
-                <div class="frame"><img src="src/img/gallery/img1.jpg" /></div>
+                <div class="frame"><img src="works/hullo-81.jpg" /></div>
                 <div class="thumb-content"><p>SABER :<br> CAR 2017</p>(FORMULA GREEN'2017)</div>
                 <div style="clear:both;"></div>
             </div></a>
           <a href="#cars2015">  <div class="thumb">
-                <div class="frame"><img src="src/img/gallery/img2.jpg" /></div>
+                <div class="frame"><img src="src/img/gallery/pic5.jpg" /></div>
                 <div class="thumb-content"><p>BOLT :<br> Car 2015</p>(FSAE Australasia'2015)</div>
                 <div style="clear:both;"></div>
             </div></a>
              <a href="#cars2013"><div class="thumb">
-                <div class="frame"><img src="src/img/gallery/img3.jpg" /></div>
+                <div class="frame"><img src="works/img2.jpg" /></div>
                 <div class="thumb-content" onclick="cars()"><p>Car 2013</p>F1 Racetrack, UK </div>
                 <div style="clear:both;"></div>
             </div></a>
