--- a/new/index.html
+++ b/new/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    
+
 	    <meta name="description" content="">
 
 	    <meta name="keywords" content="">
@@ -48,18 +48,18 @@
 		            if( bottom_of_window > bottom_of_object ){
 		                $(this).animate({'opacity':'1','padding-top':'2.5vh'},700);
 		            }
-		        }); 
+		        });
 		        $('.navbarAnimate').each( function(i){
 		            var bottom_of_object = $(this).position().top + $(this).outerHeight();
 		            var bottom_of_window = $(window).scrollTop() + $(window).height();
 		            if( bottom_of_window > bottom_of_object ){
 		                $(this).animate({'opacity':'1'},1000);
 		            }
-		        }); 
+		        });
 		    });
 		});
 	</script>
-	
+
 	<div id="sliderFrame">
         <div id="slider">
             <img src="src/img/gallery/img1.jpg" class="img-fluid" />
@@ -113,13 +113,13 @@
 			        <li><a href="gallery.html">GALLERY</a></li>
 			        <li><a href="sponsors.html">SPONSORS</a></li>
 			        <li><a href="#contact" class="scrollTo">CONTACT US</a></li>
-			    </ul>
+				    </ul>
 		    </div><!-- /.navbar-collapse -->
-		  </div><!-- /.container-fluid -->
+  		  </div><!-- /.container-fluid -->
 		</nav>
-		
+
 		<div class="container-fluid" >
-			<div class="row mar-b-50">			
+			<div class="row mar-b-50">
 				<p class="aboutUsHeading navbar-right hideme">ABOUT US</p><br>
 			</div>
 			<div class="row ">
@@ -264,10 +264,10 @@
 				        </div>
 				    </div>
 				    <script type="text/javascript">jssor_1_slider_init();</script>
-				    <!-- #endregion Jssor Slider End 
+				    <!-- #endregion Jssor Slider End
 				    SPONSOR SLIDER END-->
 
-			
+
 			</div>
 
 		<footer class="footer" id="contact">
@@ -279,7 +279,7 @@
                         <p class="footerDetail"><i class="fa fa-envelope footerDetailIcon1"></i>EMAIL : iitrms.iitr@gmail.com</p>
                     </div>
                     <div class="col-sm-3">
-						 
+
 					</div>
 				</div>
                 <div class="row">
@@ -293,9 +293,9 @@
 							</div>
                 		</div> -->
                 		<div class="row">
-						 	<i class="fa fa-facebook footerSocialIcon" ></i>
-						 	<i class="fa fa-linkedin footerSocialIcon"></i>
-						 	<i class="fa fa-twitter  footerSocialIcon"></i>
+					<a href="https://www.facebook.com/iitrms.in/"><i class="fa fa-facebook footerSocialIcon" ></i></a>
+					<a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fiitroorkeemotorsportsteam%2F&h=ATM5BKop9CBbx8iKrXO6uXWOAZlYSC4XE9vXec2-DbFECfr5L7HynvBrMewSrBTqgRha1DC7OmjCUy3oQaD38k_dBM9g-k_w4xDA6I95nD4kBQ"><i class="fa fa-linkedin footerSocialIcon"></i></a>
+					<a href="https://l.facebook.com/l.php?u=https%3A%2F%2Ftwitter.com%2Fiitrms_iitr&h=ATM8JDpGH7RfYerxvDzOZ73yD9u3PrhsmTLexZ6Dn7cWzUU459y2jU_fB0nSe9Zmv4XSXHQ4gX8XR6yuMNswhwvso5dNxbs8hn-IsY8mqSEJ8g"><i class="fa fa-twitter  footerSocialIcon"></i></a>
 						 	<i class="fa fa-instagram footerSocialIcon"></i>
 					 	</div>
                 	</div>
