--- a/new/project.html
+++ b/new/project.html
@@ -15,7 +15,7 @@
 	    <link rel="icon" href="src/img/logo.ico">
 	    <link href="https://fonts.googleapis.com/css?family=Allerta|Lato:300,400,700,900" rel="stylesheet">
 	    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-	    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>      
+	    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	    <link href="src/css/bootstrap.min.css" rel="stylesheet">
 	    <link href="src/css/bootstrap-theme.min.css" rel="stylesheet">
@@ -56,30 +56,30 @@
 
 
 	</script>
-		<nav class="navbar navbar-default navbarAnimate sticky">
-		  <div class="container-fluid">
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-		        <span class="sr-only">Toggle navigation</span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		      </button>
-		      <a class="navbar-brand" href="index.html"><img src="src/img/logo.gif" class="logoHeader"></a>
-		    </div>
-		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		        <ul class="nav navbar-nav navbar-right headerLink">
-			        <li><a href="index.html" class="navmobview">HOME</a></li>
-			        <li><a href="about.html" class="navmobview">ABOUT US</a></li>
-			        <li class="active navmobview"><a href="project.html">CARS</a></li>
-			        <li><a href="team.html" class="navmobview">TEAM</a></li>
-			        <li><a href="gallery.html" class="navmobview">GALLERY</a></li>
-			        <li><a href="sponsors.html" class="navmobview">SPONSORS</a></li>
-			        <li><a href="#contact" class="scrollTo navmobview">CONTACT US</a></li>
-			    </ul>
-		    </div><!-- /.navbar-collapse -->
-		  </div><!-- /.container-fluid -->
-		</nav>
+	<nav class="navbar navbar-default navbarAnimate" data-spy="affix">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="index.html"><img src="src/img/logo.gif" class="logoHeader"></a>
+			</div>
+			<div class="collapse navbar-collapse staticnaavbar" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav navbar-right  headerLink">
+						<li><a  href="index.html">HOME</a></li>
+						<li><a href="about.html" class="navmobview">ABOUT US</a></li>
+						<li class = "active navmobview"><a href="project.html" class="navmobview">CARS</a></li>
+						<li><a href="team.html" class="navmobview">TEAM</a></li>
+						<li><a href="gallery.html" class="navmobview">GALLERY</a></li>
+						<li><a href="sponsors.html" class="navmobview">SPONSORS</a></li>
+						<li><a href="#contact" class="navmobview scrollTo">CONTACT US</a></li>
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>
 	<div id="sliderFrame" style="margin-top: 5vh;margin-bottom: 5vh">
         <div id="slider">
             <a href="#cars2017"><img src="works/hullo-81.jpg" /></a>
@@ -106,17 +106,17 @@
             </div></a>
             <div class="thumb">
                 <div class="frame"><img src="src/img/gallery/img4.jpg" /></div>
-                <div class="thumb-content" onclick="cars()"><p>Car 2011</p></div>
+                <div class="thumb-content" onclick="cars()"><p>FIGHTER :<br> Car 2011</p></div>
                 <div style="clear:both;"></div>
             </div>
         </div>
         <!--clear above float:left elements. It is required if above #slider is styled as float:left. -->
         <div style="clear:both;height:0;"></div>
     </div>
-	
+
 
 	<script>
-		
+
 function cars() {
     var car_2017 = document.getElementById("cars_2017");
     var car_2015 = document.getElementById("cars_2015");
