links added to footer

--- a/gallery.html
+++ b/gallery.html
@@ -370,10 +370,10 @@
                     </div>
                     <div class="col-xs-3">
                         <div class="row">
-                            <i class="fa fa-facebook footerSocialIcon" ></i>
-                            <i class="fa fa-linkedin footerSocialIcon"></i>
-                            <i class="fa fa-twitter  footerSocialIcon"></i>
-                            <i class="fa fa-instagram footerSocialIcon"></i>
+                                    <a href="https://www.facebook.com/iitrms.in/" target="_blank"><i class="fa fa-facebook footerSocialIcon" ></i></a>
+                                    <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fiitroorkeemotorsportsteam%2F&h=ATM5BKop9CBbx8iKrXO6uXWOAZlYSC4XE9vXec2-DbFECfr5L7HynvBrMewSrBTqgRha1DC7OmjCUy3oQaD38k_dBM9g-k_w4xDA6I95nD4kBQ"  target="_blank"><i class="fa fa-linkedin footerSocialIcon"></i></a>
+                                    <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Ftwitter.com%2Fiitrms_iitr&h=ATM8JDpGH7RfYerxvDzOZ73yD9u3PrhsmTLexZ6Dn7cWzUU459y2jU_fB0nSe9Zmv4XSXHQ4gX8XR6yuMNswhwvso5dNxbs8hn-IsY8mqSEJ8g"  target="_blank"><i class="fa fa-twitter  footerSocialIcon"></i></a>
+                                    <a href="https://www.instagram.com/iitrms/?hl=en" target="_blank"><i class="fa fa-instagram footerSocialIcon"></i>
                         </div>
                     </div>
                 </div>
