--- a/gallery.html
+++ b/gallery.html
@@ -53,25 +53,23 @@
 				</button>
 				<a class="navbar-brand" href="index.html"><img src="src/img/logo.gif" class="logoHeader"></a>
 			</div>
-			<div class="collapse navbar-collapse staticnaavbar" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav navbar-right  headerLink">
-						<li><a  href="index.html">HOME</a></li>
-						<li><a href="about.html" class="navmobview">ABOUT US</a></li>
-						<li><a href="project.html" class="navmobview">CARS</a></li>
-						<li><a href="team.html" class="navmobview">TEAM</a></li>
-						<li class = "active navmobview"><a href="gallery.html" class="navmobview">GALLERY</a></li>
-						<li><a href="sponsors.html" class="navmobview">SPONSORS</a></li>
-						<li><a href="#contact" class="navmobview scrollTo">CONTACT US</a></li>
-				</ul>
-			</div><!-- /.navbar-collapse -->
-		</div><!-- /.container-fluid -->
-	</nav>
-
+      <div class="collapse navbar-collapse staticnaavbar" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right  headerLink">
+            <li><a  href="index.html">HOME</a></li>
+            <li><a href="about.html" class="navmobview">ABOUT US</a></li>
+            <li class = "active navmobview"><a href="project.html" class="navmobview">CARS</a></li>
+            <li><a href="team.html" class="navmobview">TEAM</a></li>
+            <li><a href="gallery.html" class="navmobview">GALLERY</a></li>
+            <li><a href="sponsors.html" class="navmobview">SPONSORS</a></li>
+            <li><a href="#contact" class="navmobview scrollTo">CONTACT US</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav><br><br><br>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <ul id="filters" class="clearfix">
-
                         <li><span class="filter active" data-filter="c2017">2017</span></li>
                         <li><span class="filter" data-filter="c2015">2015</span></li>
                         <li><span class="filter" data-filter="c2013">2013</span></li>
