made changes in home page

--- a/team.html
+++ b/team.html
@@ -131,7 +131,7 @@
 						   </div>
 						   <div class="teamid">
 						   <p class="teamname">Atulya Tibrewal</p>
-						   <p class="teampos">Operations and Financial Head</p>
+						   <p class="teampos">Marketing</p>
 						   </div>
 						</div>
 					</div>
@@ -227,7 +227,7 @@
                         </div></div><br><br></div>
                   <div class="container" >
                    <div class="row">
-                        <div class="col-md-12 department1" id="flipDownMarket">Operations and Financial</div>
+                        <div class="col-md-12 department1" id="flipDownMarket">Marketing</div>
                    </div>
                              <br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2); width: 90vw;">
                                <div id="marketJS">
