--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@ The Car is judged on the basis of Static and Dynamic events. Static events consi
 				<!-- <div class="col-sm-4"> -->
 					<!-- <img src="src/img/img1.jpg" style="height: auto;width: 30vw;margin-top: 16.5vh;margin-bottom: 5vh"> -->
 				<!-- </div> -->
-			</div>	
+			</div></div>	
 		<footer class="footer" id="contact">
 			<div class="container-fluid">
 				<div class="row">
