soem minor changes

--- a/index.html
+++ b/index.html
@@ -159,18 +159,20 @@
 					<a href="about.html">READ MORE</a>
 				</div>
 			</div>
-			<div class="row eventDiv borderLine">
+			<div class="row borderLine">
 				<div class="col-sm-6 rightBorder eventPad">
-					<p class="eventHeading navbarAnimate">UPDATES</p>
-					<p class="eventContent eventContentHeading navbarAnimate" >Participating in Formula Bharat 2019 followed by FS UK 2019 </p>
-					<p class="eventContent navbarAnimate text-justify">23 Mar 2018 - Procurement and Fabrication of the car is starting from the 1st week of April.</br>
-22 Mar 2018 - Design of the next car is completed.</br>
-17 Mar 2018 - Vehicle and current project exhibition at Srishti 2018  A Techno-hobby competition of IIT Roorkee.</br>
-10 Mar 2018 - BEG Exhibition at Group Ground Roorkee Cantonment.</br>
-10 Feb 2018 - Team has successfully tested the prototype of BMS.</br>
-27 Oct 2017 - Thomso 2017 Promotional event .</br>
-</p>
-
+					<p class="eventHeading eventDiv navbarAnimate">UPDATES</p>
+					<p class="eventContent eventDiv eventContentHeading navbarAnimate" >Participating in Formula Bharat 2019 followed by FS UK 2019 </p>
+					<p class="eventContent navbarAnimate">
+						<div class="row" style="font-size: 17px;">
+							<p style="display:flex; flex-direction: vertical;"><div class="col-sm-2" text-align="center">23 Mar 2018</div>- Procurement and Fabrication of the car is starting from the 1st week of April.</br></p>
+							<div class="col-sm-2" text-align="center">22 Mar 2018</div> - Design of the next car is completed.</br>
+							<div class="col-sm-2" text-align="center">17 Mar 2018</div> - Vehicle and current project exhibition at Srishti,2018 , a Techno-hobby competition of IIT Roorkee.</br>
+							<div class="col-sm-2" text-align="center">10 Mar 2018</div> - BEG Exhibition at Group Ground Roorkee Cantonment.</br>
+							<div class="col-sm-2" text-align="center">10 Feb 2018</div> - Team has successfully tested the prototype of BMS.</br>
+							<div class="col-sm-2" text-align="center">27 Oct 2017</div> - Thomso 2017 Promotional event .</br>
+						</div>
+					</p>
 				</div>
 				<!--<div class="col-sm-6 eventPad ">
 					<p class="eventHeading navbarAnimate">TEAM UPDATES</p>
@@ -182,6 +184,7 @@
                 <section class="wow  col-lg-12 " style=" visibility: visible; " data-wow-animation-name="fadeInRight">
                     <iframe width="100%" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fiitrms.in%2F%3Ffref%3Dts&amp;tabs=timeline&amp;width=500&amp;height=500&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
                 </section>
+                </div>
             </div>
 
 
@@ -217,7 +220,8 @@
 
 
 
-                    <div class="owl-controls clickable" style="display: none;"><div class="owl-pagination"><div class="owl-page active"><span class=""></span></div></div></div></div>
+                    <div class="owl-controls clickable" style="display: none;"><div class="owl-pagination"><div class="owl-page active"><span class=""></span></div>	</div></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -290,49 +294,78 @@
 				        </div>
 				        <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:1400px;height:50px;overflow:hidden;">
 				            <div data-p="30.00">
+				            <a href="http://www.mrftyres.com/" target="_blank">
 				                <img data-u="image" src="src/img/sponsors/mrf.png" />
+				            </a>
 				            </div>
 				            <div data-p="30.00">
+				            <a href="http://www.goodlucksteel.com/" target="_blank">
 				                <img data-u="image" src="src/img/sponsors/gl.jpg" />
+				            </a>
 				            </div>
 				            <div data-p="30.00">
+				            <a href="http://www.solidworks.in/" target="_blank">
 				                <img data-u="image" src="src/img/sponsors/sw.png" />
+				            </a>
 				            </div>
 				            <div data-p="30.00">
+				            <a href="http://en.winston-battery.com/" target="_blank">
 				                <img data-u="image" src="src/img/sponsors/wb.png" />
+				            </a>
 				            </div>
 				            <div data-p="30.00">
+				            <a href="	http://www.iotrek.in/" target="_blank">
 				                <img data-u="image" src="src/img/sponsors/iotrek.png" />
+				            </a>
 				            </div>
 				            <div data-p="30.00">
+				            <a href="	http://navigus.in/" target="_blank">
 				                <img data-u="image" src="src/img/sponsors/navigus.png" />
+				            </a>
 				            </div>
 				            <div data-p="30.00">
+				            <a href="https://www.motul.com/in/en" target="_blank">
 				                <img data-u="image" src="src/img/sponsors/motul.png" />
+				            </a>
 				            </div>
 				            <div data-p="30.00">
+				            <a href="http://www.goodlucksteel.com/" target="_blank">
 				                <img data-u="image" src="src/img/sponsors/gdl.jpg" />
+				            </a>
 				            </div>
 				            <div data-p="30.00">
+
 				                <img data-u="image" src="src/img/sponsors/blc.png" />
 				            </div>
 				            <div data-p="30.00">
+				            <a href="http://www.solidworks.in/" target="_blank">
 				                <img data-u="image" src="src/img/sponsors/sw.png" />
+				            </a>
 				            </div>
 				            <div data-p="30.00">
+				            <a href="http://www.centuryply.com/" target="_blank">
 				                <img data-u="image" src="src/img/sponsors/cen.gif" />
+				            </a>
 				            </div>
 				            <div data-p="30.00">
+				            <a href="https://www.phoenixcontact.com/online/portal/pc?1dmy&urile=wcm:path:/pcen/web/home" target="_blank">
 				                <img data-u="image" src="src/img/sponsors/phe.png" />
+				            </a>
 				            </div>
 				            <div data-p="30.00">
+				            <a href="http://www.tidcindia.in/" target="_blank">
 				                <img data-u="image" src="src/img/sponsors/tidc.png" />
+				            </a>
 				            </div>
 				            <div data-p="30.00">
+				            <a href="http://www.resistorsonline.com/" target="_blank">
 				                <img data-u="image" src="src/img/sponsors/enap.jpg" />
+				            </a>
 				            </div>
 				            <div data-p="30.00">
+				            <a href="http://www.abrasivesedge.com/" target="_blank">
 				                <img data-u="image" src="src/img/sponsors/ae.jpg" />
+				            </a>
 				            </div>
 				        </div>
 				    </div>
@@ -367,8 +400,8 @@
                 		</div> -->
                 		<div class="row">
 									<a href="https://www.facebook.com/iitrms.in/" target="_blank"><i class="fa fa-facebook footerSocialIcon" ></i></a>
-									<a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fiitroorkeemotorsportsteam%2F&h=ATM5BKop9CBbx8iKrXO6uXWOAZlYSC4XE9vXec2-DbFECfr5L7HynvBrMewSrBTqgRha1DC7OmjCUy3oQaD38k_dBM9g-k_w4xDA6I95nD4kBQ"  target="_blank"><i class="fa fa-linkedin footerSocialIcon"></i></a>
-									<a href="https://l.facebook.com/l.php?u=https%3A%2F%2Ftwitter.com%2Fiitrms_iitr&h=ATM8JDpGH7RfYerxvDzOZ73yD9u3PrhsmTLexZ6Dn7cWzUU459y2jU_fB0nSe9Zmv4XSXHQ4gX8XR6yuMNswhwvso5dNxbs8hn-IsY8mqSEJ8g"  target="_blank"><i class="fa fa-twitter  footerSocialIcon"></i></a>
+									<a href="https://www.linkedin.com/in/iitroorkeemotorsportsteam/"  target="_blank"><i class="fa fa-linkedin footerSocialIcon"></i></a>
+									<a href="https://twitter.com/iitrms_iitr"  target="_blank"><i class="fa fa-twitter  footerSocialIcon"></i></a>
 						 	    	<a href="https://www.instagram.com/iitrms/?hl=en" target="_blank"><i class="fa fa-instagram footerSocialIcon"></i>
 					 	</div>
                 	</div>
