--- a/sponsors.html
+++ b/sponsors.html
@@ -109,21 +109,27 @@
 									<div class="col-sm-4">
 										<div class="hover08 column">
 										    <div>
-											    <figure><img src="src/img/sponsors/mrf.png"  class="sponsorsImage" /></figure>
+										    	<a href="http://www.mrftyres.com/" target="_blank">
+											    	<figure><img src="src/img/sponsors/mrf.png"  class="sponsorsImage" /></figure>
+											    </a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="hover08 column">
 										    <div>
+										    <a href="http://www.goodlucksteel.com/" target="_blank">
 											    <figure><img src="src/img/sponsors/gl.jpg"  class="sponsorsImage" /></figure>
+											</a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="hover08 column">
 										    <div>
+										    <a href="http://www.solidworks.in/" target="_blank">
 											    <figure><img src="src/img/sponsors/sw.png"  class="sponsorsImage" /></figure>
+											</a>
 										    </div>
 										</div>
 									</div>
@@ -139,28 +145,36 @@
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
+										    <a href="http://www.mrftyres.com/" target="_blank">
 											    <figure><img src="src/img/sponsors/mrf.png"  class="sponsorsImage" /></figure>
+											</a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
+										    <a href="http://en.winston-battery.com/" target="_blank">
 											    <figure><img src="src/img/sponsors/wb.png"  class="sponsorsImage" /></figure>
+											</a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
+										    <a href="	http://www.iotrek.in/" target="_blank">
 											    <figure><img src="src/img/sponsors/iotrek.png"  class="sponsorsImage" /></figure>
+											</a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
+										    <a href="	http://navigus.in/" target="_blank">
 											    <figure><img src="src/img/sponsors/navigus.png"  class="sponsorsImage" /></figure>
+											 </a>
 										    </div>
 										</div>
 									</div>
@@ -171,20 +185,25 @@
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
+										    <a href="https://www.motul.com/in/en" target="_blank">	
 											    <figure><img src="src/img/sponsors/motul.png"  class="sponsorsImage" /></figure>
+											 </a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
+										    <a href="http://www.goodlucksteel.com/" target="_blank">
 											    <figure><img src="src/img/sponsors/gdl.jpg"  class="sponsorsImage" /></figure>
+										    </a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
+
 											    <figure><img src="src/img/sponsors/blc.png"  class="sponsorsImage" /></figure>
 										    </div>
 										</div>
@@ -192,7 +211,9 @@
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
+										    <a href="http://www.solidworks.in/" target="_blank">
 											    <figure><img src="src/img/sponsors/sw.png"  class="sponsorsImage" /></figure>
+											</a>
 										    </div>
 										</div>
 									</div>
@@ -203,35 +224,45 @@
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
+										    <a href="http://www.centuryply.com/" target="_blank">
 											    <figure><img src="src/img/sponsors/cen.gif"  class="sponsorsImage" /></figure>
+										    </a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
+										    <a href="https://www.phoenixcontact.com/online/portal/pc?1dmy&urile=wcm:path:/pcen/web/home" target="_blank">
 											    <figure><img src="src/img/sponsors/phe.png"  class="sponsorsImage" /></figure>
+											</a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
+										    <a href="http://www.tidcindia.in/" target="_blank">
 											    <figure><img src="src/img/sponsors/tidc.png"  class="sponsorsImage" /></figure>
+											</a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="hover08 column">
 										    <div>
+										    <a href="http://www.resistorsonline.com/" target="_blank">
 											    <figure><img src="src/img/sponsors/enap.jpg"  class="sponsorsImage" /></figure>
+											</a>
 										    </div>
 										</div>
 									</div>
 									<div class="col-sm-4 col-sm-offset-4">
 										<div class="hover08 column">
 										    <div>
+										    <a href="http://www.abrasivesedge.com/" target="_blank">
 											    <figure><img src="src/img/sponsors/ae.jpg"  class="sponsorsImage ae"/></figure>
+											</a>
 										    </div>
 										</div>
 									</div>
@@ -261,8 +292,8 @@
                 	<div class="col-sm-3">
                 		<div class="row">
 									<a href="https://www.facebook.com/iitrms.in/" target="_blank"><i class="fa fa-facebook footerSocialIcon" ></i></a>
-									<a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fiitroorkeemotorsportsteam%2F&h=ATM5BKop9CBbx8iKrXO6uXWOAZlYSC4XE9vXec2-DbFECfr5L7HynvBrMewSrBTqgRha1DC7OmjCUy3oQaD38k_dBM9g-k_w4xDA6I95nD4kBQ"  target="_blank"><i class="fa fa-linkedin footerSocialIcon"></i></a>
-									<a href="https://l.facebook.com/l.php?u=https%3A%2F%2Ftwitter.com%2Fiitrms_iitr&h=ATM8JDpGH7RfYerxvDzOZ73yD9u3PrhsmTLexZ6Dn7cWzUU459y2jU_fB0nSe9Zmv4XSXHQ4gX8XR6yuMNswhwvso5dNxbs8hn-IsY8mqSEJ8g"  target="_blank"><i class="fa fa-twitter  footerSocialIcon"></i></a>
+									<a href="https://www.linkedin.com/in/iitroorkeemotorsportsteam/"  target="_blank"><i class="fa fa-linkedin footerSocialIcon"></i></a>
+									<a href="https://twitter.com/iitrms_iitr"  target="_blank"><i class="fa fa-twitter  footerSocialIcon"></i></a>
 						 	    	<a href="https://www.instagram.com/iitrms/?hl=en" target="_blank"><i class="fa fa-instagram footerSocialIcon"></i>
 					 	</div>
                 	</div>
