--- a/suspension.html
+++ b/suspension.html
@@ -118,11 +118,11 @@
                         </div>
                         <div class="col-xs-3">
                                 <div class="row">
-                                                        <i class="fa fa-facebook footerSocialIcon" ></i>
-                                                        <i class="fa fa-linkedin footerSocialIcon"></i>
-                                                        <i class="fa fa-twitter  footerSocialIcon"></i>
-                                                        <i class="fa fa-instagram footerSocialIcon"></i>
-                                                </div>
+                  <a href="https://www.facebook.com/iitrms.in/" target="_blank"><i class="fa fa-facebook footerSocialIcon" ></i></a>
+                  <a href="https://www.linkedin.com/in/iitroorkeemotorsportsteam/"  target="_blank"><i class="fa fa-linkedin footerSocialIcon"></i></a>
+                  <a href="https://twitter.com/iitrms_iitr"  target="_blank"><i class="fa fa-twitter  footerSocialIcon"></i></a>
+                    <a href="https://www.instagram.com/iitrms/?hl=en" target="_blank"><i class="fa fa-instagram footerSocialIcon"></i>
+            </div>
                         </div>
                 </div>
 
