--- a/cars2017.html
+++ b/cars2017.html
@@ -153,12 +153,12 @@
                     <p class="copyright">Copyright &#169; - 2017 Team IIT Roorkee MotorSports </p>
                 </div>
                 <div class="col-sm-3">
-                    <div class="row">
-                        <i class="fa fa-facebook footerSocialIcon"></i>
-                        <i class="fa fa-linkedin footerSocialIcon"></i>
-                        <i class="fa fa-twitter  footerSocialIcon"></i>
-                        <i class="fa fa-instagram footerSocialIcon"></i>
-                    </div>
+                     <div class="row">
+                              <a href="https://www.facebook.com/iitrms.in/" target="_blank"><i class="fa fa-facebook footerSocialIcon" ></i></a>
+                              <a href="https://www.linkedin.com/in/iitroorkeemotorsportsteam/"  target="_blank"><i class="fa fa-linkedin footerSocialIcon"></i></a>
+                              <a href="https://twitter.com/iitrms_iitr"  target="_blank"><i class="fa fa-twitter  footerSocialIcon"></i></a>
+                              <a href="https://www.instagram.com/iitrms/?hl=en" target="_blank"><i class="fa fa-instagram footerSocialIcon"></i>
+                        </div>
                 </div>
             </div>
 
