some minor changes in home page

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                 </nav>
 
 <div class="mainImage">
-        <img src="works/img2017.jpg" class="mainfrontimage">
-    <div class="center">
-        WELCOME TO IIT ROORKEE MOTORSPORTS
+        <img src="works/img2017-copy.jpg" class="mainfrontimage">
+    <div class="side">
+        WELCOME TO<br> IIT ROORKEE MOTORSPORTS
     </div>
 </div>
 
@@ -162,7 +162,7 @@
 <div class="container" style="margin-top:0px;margin-bottom:60px;">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3 class="recent-work" style ="font-size :50px"> Our  Projects</h3></div>
+                    <h3 class="recent-work" style ="font-size :70px"> Our  Projects</h3></div>
                 <div class="col-lg-12 col-lg-offset-0 recent">
                     <div id="owl-demo" class="owl-carousel owl-theme wow fadeIn animated" data-wow-animation-name="fadeIn" style="opacity: 1; display: block; visibility: visible; animation-name: fadeIn;">
                         <div class="owl-wrapper-outer"><div class="owl-wrapper" style="width: 2280px; left: 0px; display: block;"><div class="owl-item" style="width: 285px;"><div class="item view view-tenth"><img src="works/img2017.jpg" alt="work Image">
