--- a/gallery.html
+++ b/gallery.html
@@ -57,9 +57,9 @@
           <ul class="nav navbar-nav navbar-right  headerLink">
             <li><a  href="index.html">HOME</a></li>
             <li><a href="about.html" class="navmobview">ABOUT US</a></li>
-            <li class = "active navmobview"><a href="project.html" class="navmobview">CARS</a></li>
+            <li><a href="project.html" class="navmobview">CARS</a></li>
             <li><a href="team.html" class="navmobview">TEAM</a></li>
-            <li><a href="gallery.html" class="navmobview">GALLERY</a></li>
+            <li class = "active navmobview"><a href="gallery.html" class="navmobview">GALLERY</a></li>
             <li><a href="sponsors.html" class="navmobview">SPONSORS</a></li>
             <li><a href="#contact" class="navmobview scrollTo">CONTACT US</a></li>
         </ul>
