--- a/project.html
+++ b/project.html
@@ -80,6 +80,8 @@
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
+	<pre>	
+			</pre>
 	<div id="sliderFrame" style="margin-top: 10vh;margin-bottom: 5vh">
         <div id="slider">
             <a href="#cars2017"><img src="works/hullo-81.jpg" /></a>
