--- a/sponsors.html
+++ b/sponsors.html
@@ -66,30 +66,33 @@
 		b.style.color="#fff";
 	}
 </script>
-<nav class="navbar navbar-default navbarAnimate" data spy= "affix">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html"><img src="src/img/logo.gif" class="logoHeader"></a>
-      </div>
-      <div class="collapse navbar-collapse staticnaavbar" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right headerLink ">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html" class ="navmobview" >ABOUT US</a></li>
-            <li><a href="project.html" class ="navmobview">CARS</a></li>
-            <li><a href="team.html" class= "navmobview">TEAM</a></li>
-            <li><a href="gallery.html" class=" navmobview">GALLERY</a></li>
-            <li  class="active navmobview"><a href="sponsors.html">SPONSORS</a></li>
-            <li><a href="#contact"  class="navmobview scrollTo">CONTACT US</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
+      <nav class="navbar navbar-default navbarAnimate fixed-nav-bar"> 
+                  <div class="container-fluid">
+                    <div class="navbar-header">
+                      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                      </button>
+                      <a class="navbar-brand" href="index.html"><img src="src/img/logo.gif" class="logoHeader"></a>
+                    </div>
+                    <div class="collapse navbar-collapse staticnaavbar" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right  headerLink">
+                              <li><a class="navmobview" href="index.html">HOME</a></li>
+                              <li><a href="about.html" class="navmobview">ABOUT US</a></li>
+                              <li><a href="project.html" class="navmobview">CARS</a></li>
+                              <li><a href="team.html" class="navmobview">TEAM</a></li>
+                              <li><a href="gallery.html" class="navmobview">GALLERY</a></li>
+                              <li class="active"><a href="sponsors.html" class="navmobview">SPONSORS</a></li>
+                              <li><a href="#contact" class="navmobview scrollTo">CONTACT US</a></li>
+                            </ul>
+                    </div><!-- /.navbar-collapse -->
+                  </div><!-- /.container-fluid -->
+                </nav>
+                <pre>
+
+                </pre>
 		<div class="container-fluid" >
 			<p class="aboutHeading">OUR SPONSORS</p>
 			<div class="row">
