--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 			        </div>
 			    </div> -->
 
-		<nav class="navbar navbar-default navbarAnimate header">
+		 <nav class="navbar navbar-default navbarAnimate fixed-nav-bar"> 
                   <div class="container-fluid">
                     <div class="navbar-header">
                       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -76,19 +76,22 @@
                     </div>
                     <div class="collapse navbar-collapse staticnaavbar" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right  headerLink">
-                                <li><a href="index.html" class="navmobview">HOME</a></li>
-                                <li class="active navmobview"><a href="about.html">ABOUT US</a></li>
+                                <li><a class="navmobview" href="index.html">HOME</a></li>
+                                <li class="active"><a href="about.html" class="navmobview">ABOUT US</a></li>
                                 <li><a href="project.html" class="navmobview">CARS</a></li>
                                 <li><a href="team.html" class="navmobview">TEAM</a></li>
                                 <li><a href="gallery.html" class="navmobview">GALLERY</a></li>
                                 <li><a href="sponsors.html" class="navmobview">SPONSORS</a></li>
-                                <li><a href="#contact" class="scrollTo" class="navmobview">CONTACT US</a></li>
+                                <li><a href="#contact" class="navmobview scrollTo">CONTACT US</a></li>
                             </ul>
                     </div><!-- /.navbar-collapse -->
                   </div><!-- /.container-fluid -->
                 </nav>
 		
 		<div class="container-fluid" >
+			<pre>
+
+			</pre>
 			<p class="aboutHeading">ABOUT US</p>
 			<div class="row">
 				<div class="col-sm-5 aboutSlider">
